--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.10.0",
+    "pdf-to-png": "^1.0.3",
     "pdfkit": "^0.16.0",
     "qrcode": "^1.5.4",
     "stripe": "^12.0.0",
