--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "chart.js": "^4.4.8",
     "jspdf": "^3.0.1",
+    "pdf-poppler": "^0.2.1",
     "pdf-to-png-converter": "^3.6.5",
     "qrcode.react": "^4.2.0",
     "react-chartjs-2": "^5.3.0"
