--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,20 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/rte": "^5.10.5",
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.4.8",
     "@mui/x-date-pickers": "^7.28.0",
     "@tanstack/react-query": "^5.68.0",
     "@tinymce/tinymce-react": "^6.1.0",
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "antd": "^5.24.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
