--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^7.1.0",
     "aws-sdk": "^2.1357.0",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
