--- a/server/package.json
+++ b/server/package.json
@@ -35,8 +35,11 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.1.0",
     "helmet": "^6.1.5",
+    "html-to-text": "^9.0.5",
     "http-status": "^1.8.1",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
+    "json2xls": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.30.1",
     "mongoose": "^7.8.6",
@@ -47,6 +50,7 @@
     "pdf-to-png": "^1.0.3",
     "pdfkit": "^0.16.0",
     "qrcode": "^1.5.4",
+    "recharts": "^2.15.3",
     "sharp": "^0.34.2",
     "stripe": "^12.0.0",
     "validator": "^13.15.0",
